--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cordova-plugin-clipboard",
+  "name": "CordovaClipboard",
   "version": "0.1.0",
   "description": "A simple clipboard plugin",
   "author": {
